
= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.5.17 (future) =
* Fixed date calculation in test screen.
* Fixed text encoding issues for systems with PHP 5.4
* Updated CSS to better match WordPress 3.8 styles.

= 1.5.16 (2013.09.15) =
* Fixed date detection bug in forwarded messages.
* Possible fix for blank screen issue (flush buffers rather than check for sent headers).
* Fixed images showing up in excerpts when not specified.
* Fixed bug where time offset was applied twice.
* Fixed bug where excerpts where not getting the newline settings applied.
* Fixed bug where the attachment template was not getting set on new installs.
* Fixed bug where mp3 files were causing failures when getting meta-data.
* Verified compatibility with WP 36. and 3.6.1

= 1.5.15 (2013.07.01) =
* Added message warning that filter 'postie_post' has been deprecated.
* Fixed bug where a category was detected if there happened to be 2 dash (-) characters and a number was the first thing after the first dash.
* Simplified header decoding for non-ASCII languages

= 1.5.14 (2013.06.21) =
* Added PHP version to debug output
* Added PHP version check when disabling GSSAPI
* Added new filter "postie_post_before" to replace "postie_post"
* Added new filter "postie_post_after"

= 1.5.13 (2013.06.18) =
* Added more robust charset conversion to deal with malformed emails.
* Ensure the default title is used when category etc parsing results in blank title
* Consolidate procedure for locating wp-config.php
* Additional debug output.
* Fixed a bug where the default author was being used even though the email had a valid author.
* Added feature to disable IMAP authentication with GSSAPI or NTLM to improve MS Exchange compatibility.

= 1.5.12 (2013.06.08) =
* Added full paths to includes in config_form due to some hosts having include_path set in a way that breaks Postie.