@@ -26,6 +26,7 @@ Attachments are now processed in the order they were attached.
 * Fixed date calculation in test screen.
 * Fixed text encoding issues for systems with PHP 5.4
 * Updated CSS to better match WordPress 3.8 styles.
+* Removed reference to pluggable.php to allow other plugins to plug these functions.
 
 = 1.5.16 (2013.09.15) =
 * Fixed date detection bug in forwarded messages.
